# travel-web-app

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  conftest.py  manage.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
overview/: plan.txt
overview/flowchart/: chart.drawio
tapp/: asgi.py  settings.py  urls.py  wsgi.py
tapp/apps/auth/: apps.py  forms.py  tests.py  urls.py  views.py
tapp/apps/dashboard/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
tapp/apps/dashboard/migrations/: 0001_initial.py  0002_remove_visitorlog_visitor_id.py
tapp/apps/learn/: apps.py  urls.py  views.py
tapp/celery/: __init__.py
tapp/middleware/: tracking.py
tapp/settings/: __init__.py
tapp/static/css/: base.css
tapp/templates/: account.html  base.html  map_test.html  phrases.htm  script.js  startup.html  trip.html  trip_join.html
tapp/templates/learn/: index.html
tapp/templates/registration/: login.html  signup.html
tapp/tests/: __init__.py  fixtures.py  runner.py  utils.py
